Refactor: split variable-select.js into focused modules
The single 1850-line file is replaced by 7 focused files loaded in sequence:
- variable-select-state.js    — shared state + debouncedURLUpdate()
- variable-select-status.js   — visual updates, cell count, getVariableSelection()
- variable-select-codelists.js — codelist fetch/apply/restore + dropdown events
- variable-select-render.js   — dimension card rendering, value lists, restoreSelections()
- variable-select-events.js   — click/keyboard/filter/mode button event wiring
- variable-select-api.js      — API query preview, API builder UI, handleFetchData()
- variable-select.js          — main entry: renderVariableSelection() + loadTableMetadata()

No logic changes. index.html updated with the new script tags.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
   <script src="js/front-page.js"></script>
   <script src="js/search-view.js"></script>
   <script src="js/topic-view.js"></script>
+  <script src="js/variable-select-state.js"></script>
+  <script src="js/variable-select-status.js"></script>
+  <script src="js/variable-select-codelists.js"></script>
+  <script src="js/variable-select-render.js"></script>
+  <script src="js/variable-select-events.js"></script>
+  <script src="js/variable-select-api.js"></script>
   <script src="js/variable-select.js"></script>
   <script src="js/table-display.js"></script>
   <script src="js/table-rotation.js"></script>
