Add rel="noopener noreferrer" to footer external links

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 
   <!-- Footer -->
   <footer>
-    <p>Data fra <a href="https://www.ssb.no/" target="_blank">Statistisk sentralbyrå</a>
-    <a href="https://www.ssb.no/diverse/lisens" target="_blank">(CC BY 4.0)</a>
+    <p>Data fra <a href="https://www.ssb.no/" target="_blank" rel="noopener noreferrer">Statistisk sentralbyrå</a>
+    <a href="https://www.ssb.no/diverse/lisens" target="_blank" rel="noopener noreferrer">(CC BY 4.0)</a>
+    <span class="footer-separator">·</span>
+    <a href="https://github.com/avocodetoast/statistikkportalen" target="_blank" rel="noopener noreferrer">Github</a>
     <span class="footer-separator">·</span>
     <a href="#" id="clear-cache-link" title="Tøm hurtigbuffer og last inn data på nytt fra SSB">Tøm hurtigbuffer</a></p>
   </footer>
