--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Statistikkportalen</title>
   <meta name="description" content="Et uoffisielt verktøy som gir deg bedre tilgang til SSBs åpne data.">
 
+  <!-- Analytics -->
+  <script defer src="https://stats.statistikkportalen.no/script.js" data-website-id="e8e31e32-aa40-4865-8acb-3311b8a374e9"></script>
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/table.css">
