Add enhanced search (beta) with smart matching and server augmentation
Opt-in Forbedret sok (beta) toggle on the search page enables:
- Multi-word AND matching (each word must appear somewhere in the table)
- Diacritic normalization (arbok finds Arbok)
- Relevance ranking (title matches rank above path/variable matches)
- Bidirectional synonym groups (bnp finds bruttonasjonalprodukt and vice versa)
- Topic path search at hierarchy level 4+ (finds tables by subtopic name)
- Server-side augmentation via SSB API with OR syntax for synonym variants
  so abbreviations like bnp surface tables matched via variable values,
  which are not available in the local table list

State persists in URL as enh=1. Standard search is unchanged.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <script src="js/browser-state.js"></script>
   <script src="js/menu-bar.js"></script>
   <script src="js/front-page.js"></script>
+  <script src="js/search-enhanced.js"></script>
   <script src="js/search-view.js"></script>
   <script src="js/topic-view.js"></script>
   <script src="js/variable-select-state.js"></script>
