Limit analytics to domain

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Et uoffisielt verktøy som gir deg bedre tilgang til SSBs åpne data.">
 
   <!-- Analytics -->
-  <script defer src="https://stats.statistikkportalen.no/script.js" data-website-id="e8e31e32-aa40-4865-8acb-3311b8a374e9"></script>
+  <script defer src="https://stats.statistikkportalen.no/script.js" data-website-id="e8e31e32-aa40-4865-8acb-3311b8a374e9" data-domains="statistikkportalen.no" data-do-not-track="true"></script>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/main.css">
