Pre-launch fixes: console leaks, CSS dedup, top-N default, null guards
- Replace raw console.log() in index.html with logger.log() so output
  respects AppConfig.debug and does not leak internal info in production
- Guard window.AppState/BrowserState/api behind AppConfig.debug
- Consolidate duplicate dialog CSS: remove overridden shared-class rules
  from first block; add overflow-y:auto to .dialog-box
- Fix top-N default from 12 to 10 consistently across render, status,
  and restore paths (5 locations)
- Add null guard on table-link click handler in browser-state.js

--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
   <script>
     // Initialize app when DOM is ready
     document.addEventListener('DOMContentLoaded', () => {
-      console.log('[App] Initializing Statistikkportalen');
-      console.log('[App] API Base URL:', api.baseUrl);
+      logger.log('[App] Initializing Statistikkportalen');
+      logger.log('[App] API Base URL:', api.baseUrl);
 
       // Cleanup expired cache entries on startup
       const removed = api.cleanupCache();
       if (removed > 0) {
-        console.log('[App] Cleaned up ' + removed + ' expired cache entries');
+        logger.log('[App] Cleaned up ' + removed + ' expired cache entries');
       }
 
       // Log cache stats
       const stats = api.getCacheStats();
       if (stats) {
-        console.log('[App] Cache stats:', stats);
+        logger.log('[App] Cache stats:', stats);
       }
 
       // Handle browser back/forward navigation
@@ -106,7 +106,7 @@
       document.getElementById('clear-cache-link')?.addEventListener('click', async (e) => {
         e.preventDefault();
         await api.clearCache();
-        console.log('[App] Cache cleared by user');
+        logger.log('[App] Cache cleared by user');
         window.location.reload();
       });
 
@@ -120,13 +120,15 @@
       }
     });
 
-    // Expose useful functions to window for debugging
-    window.AppState = AppState;
-    window.BrowserState = BrowserState;
-    window.api = api;
+    // Expose debug helpers only when debug mode is on
+    if (AppConfig.debug) {
+      window.AppState = AppState;
+      window.BrowserState = BrowserState;
+      window.api = api;
+    }
     window.clearCache = () => {
       api.clearCache();
-      console.log('[App] API cache cleared');
+      logger.log('[App] API cache cleared');
     };
   </script>
 </body>
